--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -31,5 +31,7 @@
         <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
       </div>
     </header>
+
+    <!--*=========== MAIN ===========-->
   </body>
 </html>
