--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -33,8 +33,9 @@
     </header>
 
     <!--*=========== MAIN ===========-->
+    <main class="main"></main>
 
     <!--*=========== FOOTER ===========-->
+    <footer class="footer"></footer>
   </body>
-  <footer class="footer"></footer>
 </html>
