--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -18,10 +18,12 @@
   <body>
     <!--*=========== HEADER ===========-->
     <header class="header">
+      <!--? LOGO  -->
       <div class="logo-box">
         <img src="img/logo-white.png" alt="Logo" class="logo" />
       </div>
 
+      <!--? TEXT  -->
       <div class="text-box">
         <h1 class="heading-primary">
           <span class="heading-primary-main">Outdoors</span>
