--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -39,5 +39,7 @@
 
     <!--*=========== FOOTER ===========-->
     <footer class="footer"></footer>
+
+    <!--*=========== JAVASCRIPT ===========-->
   </body>
 </html>
