--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -45,5 +45,6 @@
     <footer class="footer"></footer>
 
     <!--*=========== JAVASCRIPT ===========-->
+    <script src=""></script>
   </body>
 </html>
