--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!--*=========== METADATA ===========-->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--*=========== FONT ===========-->
     <link
       href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900"
       rel="stylesheet"
     />
 
-    <!--*=========== CSS ===========-->
     <link rel="stylesheet" href="css/icon-font.css" />
     <link rel="stylesheet" href="css/style.css" />
 
@@ -23,28 +20,19 @@
     <!--*=========== HEADER ===========-->
     <header class="header">
       <!--? LOGO  -->
-      <div class="logo-box">
-        <img src="img/logo-white.png" alt="Logo" class="logo" />
+      <div class="header__logo-box">
+        <img src="img/logo-white.png" alt="Logo" class="header__logo" />
       </div>
 
       <!--? TEXT  -->
-      <div class="text-box">
+      <div class="header__text-box">
         <h1 class="heading-primary">
-          <span class="heading-primary-main">Outdoors</span>
-          <span class="heading-primary-sub">is where life happens</span>
+          <span class="heading-primary--main">Outdoors</span>
+          <span class="heading-primary--sub">is where life happens</span>
         </h1>
 
-        <a href="#" class="btn btn-white btn-animated">Discover our tours</a>
+        <a href="#" class="btn btn--white btn--animated">Discover our tours</a>
       </div>
     </header>
-
-    <!--*=========== MAIN ===========-->
-    <main class="main"></main>
-
-    <!--*=========== FOOTER ===========-->
-    <footer class="footer"></footer>
-
-    <!--*=========== JAVASCRIPT ===========-->
-    <script src=""></script>
   </body>
 </html>
