--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -246,6 +246,36 @@
           <a href="#" class="btn btn--green">Discover all tours</a>
         </div>
       </section>
+
+      <!--*=========== SECTION TOURS ===========-->
+      <section class="section-stories">
+        <div class="u-center-text u-margin-bottom-big">
+          <h2 class="heading-secondary">We make people genuinely happy</h2>
+        </div>
+
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-8.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                I had the best week ever with my family
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+                dolorum nulla quaerat rerum consectetur consequatur. Labore
+                fugiat alias doloremque ratione adipisci libero ut laudantium,
+                quibusdam autem magni perspiciatis, error hic.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <!--
