#43 Building the Stories Section - Part 2

--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -253,6 +253,7 @@
           <h2 class="heading-secondary">We make people genuinely happy</h2>
         </div>
 
+        <!-- ? STORY 1 -->
         <div class="row">
           <div class="story">
             <figure class="story__shape">
@@ -261,6 +262,7 @@
                 alt="Person on a tour"
                 class="story__img"
               />
+              <figcaption class="story__caption">Mary Smith</figcaption>
             </figure>
             <div class="story__text">
               <h3 class="heading-tertiary u-margin-bottom-small">
@@ -270,10 +272,41 @@
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
                 dolorum nulla quaerat rerum consectetur consequatur. Labore
                 fugiat alias doloremque ratione adipisci libero ut laudantium,
-                quibusdam autem magni perspiciatis, error hic.
+                quibusdam autem magni perspiciatis, error hic. Labore fugiat
+                alias doloremque ratione adipisci.
               </p>
             </div>
           </div>
+        </div>
+
+        <!-- ? STORY 2 -->
+        <div class="row">
+          <div class="story">
+            <figure class="story__shape">
+              <img
+                src="img/nat-9.jpg"
+                alt="Person on a tour"
+                class="story__img"
+              />
+              <figcaption class="story__caption">Jack Wilson</figcaption>
+            </figure>
+            <div class="story__text">
+              <h3 class="heading-tertiary u-margin-bottom-small">
+                Wow! My life is completely different now
+              </h3>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo,
+                dolorum nulla quaerat rerum consectetur consequatur. Labore
+                fugiat alias doloremque ratione adipisci libero ut laudantium,
+                quibusdam autem magni perspiciatis, error hic. Lorem ipsum dolor
+                sit amet consectetur adipisicing elit
+              </p>
+            </div>
+          </div>
+        </div>
+
+        <div class="u-center-text u-margin-top-huge">
+          <a href="#" class="btn-text">Read all stories &rarr;</a>
         </div>
       </section>
     </main>
