--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -16,6 +16,7 @@
     <title>Natours | Exciting tours for adventurous people</title>
   </head>
   <body>
+    <!--!=========== NAVIGATION ===========-->
     <div class="navigation">
       <input type="checkbox" class="navigation__checkbox" id="navi-toggle" />
 
@@ -48,6 +49,7 @@
       </nav>
     </div>
 
+    <!--!=========== HEADER ===========-->
     <header class="header">
       <div class="header__logo-box">
         <img src="img/logo-white.png" alt="Logo" class="header__logo" />
@@ -63,6 +65,7 @@
       </div>
     </header>
 
+    <!--!=========== MAIN ===========-->
     <main>
       <!--*=========== SECTION ABOUT ===========-->
       <section class="section-about">
@@ -426,6 +429,7 @@
       </section>
     </main>
 
+    <!--!=========== FOOTER ===========-->
     <footer class="footer">
       <div class="footer__logo-box">
         <img src="img/logo-green-2x.png" alt="Full logo" class="footer__logo" />
