--- a/01-Natours/index.html
+++ b/01-Natours/index.html
@@ -477,6 +477,35 @@
       </div>
     </footer>
 
+    <!--!=========== POPUP ===========-->
+    <div class="popup">
+      <div class="popup__content">
+        <div class="popup__left">
+          <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img" />
+          <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img" />
+        </div>
+        <div class="popup__right">
+          <h2 class="heading-secondary u-margin-bottom-small">
+            Start booking now
+          </h2>
+          <h3 class="heading-tertiary u-margin-bottom-small">
+            Important &ndash; Please read these terms before booking
+          </h3>
+          <p class="popup__text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet
+            omnis autem, quibusdam perferendis velit, quia dignissimos ipsum
+            nihil magnam earum obcaecati sed qui doloribus ipsa. Labore nam
+            necessitatibus distinctio aperiam. Lorem ipsum dolor sit amet,
+            consectetur adipisicing elit. Ea perferendis animi a accusantium
+            voluptas eaque magni ipsum voluptate molestias assumenda. Laudantium
+            consequatur enim distinctio ullam similique earum excepturi nesciunt
+            beatae.
+          </p>
+          <a href="#" class="btn btn--green">Book now</a>
+        </div>
+      </div>
+    </div>
+
     <!--
     <section class="grid-test">
       <div class="row">
