--- a/02-Trillo/index.html
+++ b/02-Trillo/index.html
@@ -151,7 +151,7 @@
                 <li class="list__item">Perfect for families</li>
               </ul>
               <div class="recommend">
-                <p class="recommed__count">Lucy and 3 other friends recommend this hotel.</p>
+                <p class="recommend__count">Lucy and 3 other friends recommend this hotel.</p>
                 <div class="recommend__friends">
                   <img src="img/user-3.jpg" alt="Friend 1" class="recommend__photo" />
                   <img src="img/user-4.jpg" alt="Friend 2" class="recommend__photo" />
