--- a/02-Trillo/index.html
+++ b/02-Trillo/index.html
@@ -161,7 +161,7 @@
               </div>
             </div>
 
-            <figure class="user-reviews">
+            <div class="user-reviews">
               <figure class="review">
                 <blockquote class="review__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque
@@ -176,23 +176,32 @@
                   <div class="review__rating">7.8</div>
                 </figcaption>
               </figure>
+
               <figure class="review">
                 <blockquote class="review__text">
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga doloremque
                   architecto dicta animi.
                 </blockquote>
                 <figcaption class="review__user">
-                  <img src="img/user-2.jpg" alt="User 2" class="review__photo" />
+                  <img src="img/user-2.jpg" alt="User 1" class="review__photo" />
                   <div class="review__user-box">
-                    <p class="review__user-name">May THomas</p>
-                    <p class="review__user-date">Sep 13th, 2017</p>
+                    <p class="review__user-name">Mary Thomas</p>
+                    <p class="review__user-date">Sept 13th, 2017</p>
                   </div>
                   <div class="review__rating">9.3</div>
                 </figcaption>
               </figure>
 
-              <button class="btn-inline">Show all <span>&rarr;</span></button>
-            </figure>
+              <button type="button" class="btn-inline">Show all <span>&rarr;</span></button>
+            </div>
+          </div>
+
+          <div class="cta">
+            <h2 class="cta__book-now">Good news! We have 4 free rooms for your selected dates!</h2>
+            <button type="button" class="btn">
+              <span class="btn__visible">Book now</span>
+              <span class="btn__invisible">Only 4 rooms left</span>
+            </button>
           </div>
         </main>
       </div>
