--- a/03-Nexter/index.html
+++ b/03-Nexter/index.html
@@ -14,22 +14,84 @@
     <title>nexter &mdash; your home, your freedom</title>
   </head>
   <body class="container">
+    <!--!=========== SIDEBAR ===========-->
     <div class="sidebar">Sidebar</div>
 
+    <!--!=========== HEADER ===========-->
     <header class="header">Header</header>
 
+    <!--!=========== REALTORS ===========-->
     <div class="realtors">Top 3 realtors</div>
 
-    <section class="features">Features</section>
+    <!--!=========== FEATURES ===========-->
+    <section class="features">
+      <!--*=========== FEATURE 1 ===========-->
+      <div class="feature">
+        <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-global"></use></svg>
+        <h4 class="heading-4">World's best luxury homes</h4>
+        <p class="feature__text">
+          Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
+          necessitatibus pariatur voluptatibus.
+        </p>
+      </div>
+      <!--*=========== FEATURE 2 ===========-->
+      <div class="feature">
+        <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-trophy"></use></svg>
+        <h4 class="heading-4">Only the best properties</h4>
+        <p class="feature__text">
+          Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut
+          quia.
+        </p>
+      </div>
+      <!--*=========== FEATURE 3 ===========-->
+      <div class="feature">
+        <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
+        <h4 class="heading-4">All homes in top locations</h4>
+        <p class="feature__text">
+          Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.
+        </p>
+      </div>
+      <!--*=========== FEATURE 4 ===========-->
+      <div class="feature">
+        <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-key"></use></svg>
+        <h4 class="heading-4">New home in one week</h4>
+        <p class="feature__text">
+          Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur
+          adipisicing elit.
+        </p>
+      </div>
+      <!--*=========== FEATURE 5 ===========-->
+      <div class="feature">
+        <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-presentation"></use></svg>
+        <h4 class="heading-4">Top 1% realtors</h4>
+        <p class="feature__text">
+          Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus
+          pariatur voluptatibus.
+        </p>
+      </div>
+      <!--*=========== FEATURE 6 ===========-->
+      <div class="feature">
+        <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-lock"></use></svg>
+        <h4 class="heading-4">Secure payments on nexter</h4>
+        <p class="feature__text">
+          Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
+        </p>
+      </div>
+    </section>
 
+    <!--!=========== STORY PICTURES ===========-->
     <div class="story__pictures">Story pictures</div>
 
+    <!--!=========== STORY CONTENT ===========-->
     <div class="story__content">Story content</div>
 
+    <!--!=========== HOMES ===========-->
     <section class="homes">Homes</section>
 
+    <!--!=========== GALLERY ===========-->
     <section class="gallery">gallery</section>
 
+    <!--!=========== FOOTER ===========-->
     <footer class="footer">Footer</footer>
   </body>
 </html>
