--- a/03-Nexter/index.html
+++ b/03-Nexter/index.html
@@ -28,7 +28,7 @@
       <!--*=========== FEATURE 1 ===========-->
       <div class="feature">
         <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-global"></use></svg>
-        <h4 class="heading-4">World's best luxury homes</h4>
+        <h4 class="heading-4 heading-4--dark">World's best luxury homes</h4>
         <p class="feature__text">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio
           necessitatibus pariatur voluptatibus.
@@ -37,7 +37,7 @@
       <!--*=========== FEATURE 2 ===========-->
       <div class="feature">
         <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-trophy"></use></svg>
-        <h4 class="heading-4">Only the best properties</h4>
+        <h4 class="heading-4 heading-4--dark">Only the best properties</h4>
         <p class="feature__text">
           Voluptatum mollitia quae. Vero ipsum sapiente molestias accusamus rerum sed a eligendi aut
           quia.
@@ -46,7 +46,7 @@
       <!--*=========== FEATURE 3 ===========-->
       <div class="feature">
         <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-map-pin"></use></svg>
-        <h4 class="heading-4">All homes in top locations</h4>
+        <h4 class="heading-4 heading-4--dark">All homes in top locations</h4>
         <p class="feature__text">
           Tenetur distinctio necessitatibus pariatur voluptatibus quidem consequatur harum.
         </p>
@@ -54,7 +54,7 @@
       <!--*=========== FEATURE 4 ===========-->
       <div class="feature">
         <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-key"></use></svg>
-        <h4 class="heading-4">New home in one week</h4>
+        <h4 class="heading-4 heading-4--dark">New home in one week</h4>
         <p class="feature__text">
           Vero ipsum sapiente molestias accusamus rerum. Lorem, ipsum dolor sit amet consectetur
           adipisicing elit.
@@ -63,7 +63,7 @@
       <!--*=========== FEATURE 5 ===========-->
       <div class="feature">
         <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-presentation"></use></svg>
-        <h4 class="heading-4">Top 1% realtors</h4>
+        <h4 class="heading-4 heading-4--dark">Top 1% realtors</h4>
         <p class="feature__text">
           Quidem consequatur harum, voluptatum mollitia quae. Tenetur distinctio necessitatibus
           pariatur voluptatibus.
@@ -72,7 +72,7 @@
       <!--*=========== FEATURE 6 ===========-->
       <div class="feature">
         <svg class="feature__icon"><use xlink:href="img/sprite.svg#icon-lock"></use></svg>
-        <h4 class="heading-4">Secure payments on nexter</h4>
+        <h4 class="heading-4 heading-4--dark">Secure payments on nexter</h4>
         <p class="feature__text">
           Pariatur voluptatibus quidem consequatur harum, voluptatum mollitia quae.
         </p>
