--- a/03-Nexter/index.html
+++ b/03-Nexter/index.html
@@ -83,7 +83,15 @@
     <div class="story__pictures">Story pictures</div>
 
     <!--!=========== STORY CONTENT ===========-->
-    <div class="story__content">Story content</div>
+    <div class="story__content">
+      <h3 class="heading-3 mb-sm">Happy Customer</h3>
+      <h2 class="heading-2 heading-2--dark mb-md">&ldquo;The best decistion of our lives&rdquo;</h2>
+      <p class="story__text">
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Tenetur distinctio necessitatibus
+        pariatur voluptatibus. Quidem consequatur harum volupta!
+      </p>
+      <button class="btn">Find your own home</button>
+    </div>
 
     <!--!=========== HOMES ===========-->
     <section class="homes">Homes</section>
