--- a/03-Nexter/index.html
+++ b/03-Nexter/index.html
@@ -80,7 +80,10 @@
     </section>
 
     <!--!=========== STORY PICTURES ===========-->
-    <div class="story__pictures">Story pictures</div>
+    <div class="story__pictures">
+      <img src="img/story-1.jpeg" alt="Couple with new house" class="story__img--1" />
+      <img src="img/story-2.jpeg" alt="New house" class="story__img--2" />
+    </div>
 
     <!--!=========== STORY CONTENT ===========-->
     <div class="story__content">
