--- a/03-Nexter/index.html
+++ b/03-Nexter/index.html
@@ -122,7 +122,7 @@
           <p>$1,200,000</p>
         </div>
         <!-- ? BUTTON -->
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <!--*=========== HOME 2 ===========-->
       <div class="home">
@@ -148,7 +148,7 @@
           <p>$2,750,000</p>
         </div>
         <!-- ? BUTTON -->
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <!--*=========== HOME 3 ===========-->
       <div class="home">
@@ -174,7 +174,7 @@
           <p>$850,000</p>
         </div>
         <!-- ? BUTTON -->
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <!--*=========== HOME 4 ===========-->
       <div class="home">
@@ -200,7 +200,7 @@
           <p>$1,950,000</p>
         </div>
         <!-- ? BUTTON -->
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <!--*=========== HOME 5 ===========-->
       <div class="home">
@@ -226,7 +226,7 @@
           <p>$9,500,000</p>
         </div>
         <!-- ? BUTTON -->
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
       <!--*=========== HOME 6 ===========-->
       <div class="home">
@@ -252,7 +252,7 @@
           <p>$600,000</p>
         </div>
         <!-- ? BUTTON -->
-        <button class="cta">Contact realtor</button>
+        <button class="btn home__btn">Contact realtor</button>
       </div>
     </section>
 
