--- a/03-Nexter/index.html
+++ b/03-Nexter/index.html
@@ -257,7 +257,11 @@
     </section>
 
     <!--!=========== GALLERY ===========-->
-    <section class="gallery">gallery</section>
+    <section class="gallery">
+      <figure class="gallery__item gallery__item--1">
+        <img src="img/gal-1.jpeg" alt="Gallery image 1" class="gallery__img" />
+      </figure>
+    </section>
 
     <!--!=========== FOOTER ===========-->
     <footer class="footer">Footer</footer>
